--- a/EME4xHelpUncompiled/Eme4xHelp/t2_distliab.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_distliab.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Distribution Liability</b></blockquote>
