--- a/EME4xHelpUncompiled/Eme4xHelp/t2_fileId.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_fileId.html
@@ -1,16 +1,21 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
-<blockquote>Element:<b>File Identifier (UUID)</b></blockquote>
+<blockquote>Element:<b> File Identifier (UUID)</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: metstdn</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>Value that uniquely identifies this metadata record (UUID). This identifier is assigned and maintained by the custodian of the metadata record.
-</blockquote>
+<blockquote>ISO Element Name: fileIdentifier</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Typically, the value for this field will be 'FGDC Content Standard for Digital Geospatial Metadata'.  Follow FGDC guidance for implementation of this field. </blockquote>
+<blockquote>Use this field only if you have an existing record in the EDG you would like to maintain/overwrite.  The EDG UUID is the string between "%7B" and "%7D" at the bottom of your metadata record's details page.  Otherwise leave this field empty and the EDG will take care of it for you. </blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Mandatory unique identifier for the dataset or API as maintained within an Agency catalog or database.
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Value that uniquely identifies this metadata record (UUID). This identifier is assigned and maintained by the custodian of the metadata record.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>Value that uniquely identifies this metadata record (UUID). This identifier is assigned and maintained by the custodian of the metadata record.</blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
