--- a/EME4xHelpUncompiled/Eme4xHelp/t2_language.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_language.html
@@ -1,18 +1,24 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Language</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: metstdn</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The name of the metadata standard used to document the data set.
-</blockquote>
+<blockquote>ISO Element Name: language</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Typically, the value for this field will be 'FGDC Content Standard for Digital Geospatial Metadata'.  Follow FGDC guidance for implementation of this field. </blockquote>
+<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. The language code and country code are documented in the following manner:  	&#60; ISO639-2/T three letter language code &#62; &#60; ; &#62; &#60; blank space &#62; &#60; ISO3166-1 three letter country code &#62; Country code is given in uppercase. Example: eng; USA </blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Optional</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Language of the metadata record composed of as an ISO639-2/T three letter language code and an ISO3166-1 three letter country code.
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
+</blockquote>
 <h3>Domain</h3>
-<blockquote>free text</blockquote>
+<blockquote>ISO639-2/T three letter language code and an ISO3166-1 three letter country code. e.g., eng; USA</blockquote>
 <br><br><br><br>
 </body>
 </html>
