--- a/EME4xHelpUncompiled/Eme4xHelp/t2_metd.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_metd.html
@@ -1,19 +1,24 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Metadata Date</b></blockquote>
 <blockquote>Type: date</blockquote>
-<blockquote>Short Name: metd</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The date that the metadata were created or last updated.
-</blockquote>
+<blockquote>ISO Element Name: dateStamp</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>This field is required for minimum EPA compliancy as per FGDC requirements.  Rely on FGDC definition for the metadata date field and follow date domain format restrictions as posted below.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The date that the metadata were last updated.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>The date that the metadata were last updated.
+</blockquote>
 <h3>Domain</h3>
-<blockquote>free date</blockquote>
-<blockquote>This date should be documented in YYYY, YYYMM, or YYYMMDDD format, with Y=year, M=month, D=day.  No slashes are permitted.</blockquote>
+<blockquote>YYYY-MM-DD</blockquote>
+<blockquote></blockquote>
 <br><br><br><br>
 </body>
 </html>
