--- a/EME4xHelpUncompiled/Eme4xHelp/t2_metstdn.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_metstdn.html
@@ -1,16 +1,29 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Metadata Standard Name</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: metstdn</blockquote>
+<blockquote>ISO Element Name: metadataStandardName</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Typically, the value for this field will be:
+<ul>
+	<li>ISO 19115: "ISO 19115 Geographic information - Metadata"
+	<li>ISO 19115-2: "ISO 19115-2 Geographic Information - 
+Metadata - Part 2: Extensions for 
+Imagery and Gridded Data"
+</ul>
+Follow FGDC guidance for implementation of this field. </blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The name of the metadata standard/profile used.
+</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>The name of the metadata standard used to document the data set.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Typically, the value for this field will be 'FGDC Content Standard for Digital Geospatial Metadata'.  Follow FGDC guidance for implementation of this field. </blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
