--- a/EME4xHelpUncompiled/Eme4xHelp/t2_resourceProducer.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_resourceProducer.html
@@ -1,18 +1,24 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Resource Producer</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: origin</blockquote>
+<blockquote>Type: compound CI_ResponsibleParty</blockquote>
+<blockquote>ISO Element Name: citedResponsibleParty</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Who created/produced the resource.</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>The name of an organization or individual that developed the data set.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</blockquote>
 <h3>Domain</h3>
-<blockquote>free text</blockquote>
+<blockquote>CI_ResponsibleParty</blockquote>
 <br><br><br><br>
 </body>
 </html>
