--- a/EME4xHelpUncompiled/Eme4xHelp/t2_useconst.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_useconst.html
@@ -1,19 +1,35 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
-<blockquote>Element:<b> Use Constraints</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: useconst</blockquote>
+<blockquote>Element:<b> Legal Constraints</b></blockquote>
+<blockquote>Type: compound</blockquote>
+<blockquote>ISO Element Name: MD_LegalConstraints</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote> This section pertains to the legal restrictions or prerequisites to using the resource or accessing the metadata. The following elements are included:
+<ul>
+	<li><b>Use Limitation</b> - Statement on the fitness of use or limitations on the use of the resource or metadata. Domain: free text. EPA General Use Limitation Statement: "Please check sources, scale, accuracy, currentness and other available information. Please confirm that you are using the most recent copy of both data and metadata."
+	<li><b>Access Constraints</b> - Limitations on access to the resource or metadata to protect privacy, intellectual property, or any special limitations. Type: MD_RestrictionCode. Domian: copyright, patent, patentPending, trademark, license, intellectualPropertyRights, restricted, otherRestrictions.
+	<li><b>Use Constraints</b> - Restrictions or limitations or warnings to protect privacy, intellectual property, or other special restrictions on the resource or the metadata. Type: MD_RestrictionCode. Domian: copyright, patent, patentPending, trademark, license, intellectualPropertyRights, restricted, otherRestrictions.
+	<li><b>otherConstraints</b> - Other restrictions or legal prerequisites for accessing the resource or metadata.	Domain: free text. Best Practices: otherConstraints becomes mandatory when accessConstraints or useCosntraints are set to “otherRestrictions”.
+	
+</ul>
+<b>[THIS NEEDS TO BE RE-WORKED INTO THE ABOVE???????]</b>
+For data developed by other parties, retain use constraints information, and add the EPA General Use Constraints Statement (shown below).  For data developed in-house, determine scale, accuracy, and other limitations related to using the data.  If there are no known use constraints for the data set, use the term 'None' and provide the EPA General Use Constraints Statement (shown below).
+
+</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The legal restrictions or prerequisites to using the resource or accessing the metadata.
+</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Restrictions and legal prerequisites for using the data set after access is granted.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>For data developed by other parties, retain use constraints information, and add the EPA General Use Constraints Statement (shown below).  For data developed in-house, determine scale, accuracy, and other limitations related to using the data.  If there are no known use constraints for the data set, use the term 'None' and provide the EPA General Use Constraints Statement (shown below).
-</blockquote>
 <h3>Domain</h3>
-<blockquote>EPA General Use Constraints Statement: "Please check sources, scale, accuracy, currentness and other available information. Please confirm that you are using the most recent copy of both data and metadata."</blockquote>
+<blockquote>See above</blockquote>
 <br><br><br><br>
 </body>
 </html>
