--- a/EME4xHelpUncompiled/Eme4xHelp/t2_contactProgramCode.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_contactProgramCode.html
@@ -1,27 +1,25 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
-<blockquote>Element:<b> Distribution Contact</b></blockquote>
-<blockquote>Type: compound</blockquote>
-<blockquote>Short Name: distinfo</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The party from whom the data set may be obtained.
-</blockquote>
+<blockquote>Element:<b> Program Code</b></blockquote>
+<blockquote>Type: Attribute for parent element containing CI_ResponsibleParty</blockquote>
+<blockquote>ISO Element Name: xlink:title</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>Provide detailed information in this field to identify the person or organization that should be contacted regarding accessing the data or asset.  Contact information within this element may or may not be the same as that listed for the contact for the data and/or metadata.</blockquote>
+<blockquote>The user friendly name of the primary program related to this data asset, from the Federal Program Inventory.  Choose from Pick List.</blockquote>
 <h3>Data.gov Requirement/Guidance</h3>
-<blockquote>The EME Distribution Contact element includes 3 mandatory Data.gov elements: 
-<ul>
-<li><strong>Publisher</strong> - The plaintext name of the entity publishing this resource, corresponding to the FGDC contact organization.</li>
-<li><strong>Contact Name</strong> - A contact person's name for the asset, corresponding to the FGDC contact person.</li>
-<li><strong>Contact Email</strong> - A valid email address for the contact person listed above. An email address corresponding to a helpdesk or distribution list is an acceptable alternative.</li>
-</ul>
-It does not matter whether the "Primary Person" or "Primary Organization" radio button is selected, as long as the metadata contains all three elements above.  If validation fails, the contact info may need to be edited in the <a href="Help_DB.html">EME database</a> or by opening up the metadata document in a text editor.
+<blockquote>Required for United States Federal Government Agencies
+</blockquote>
+<h3>ISO Definition</h3>
+<blockquote>NA
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
 </blockquote>
 <h3>Domain</h3>
-<blockquote>None.</blockquote>
+<blockquote>Pick List</blockquote>
 <br><br><br><br>
 </body>
 </html>
