--- a/EME4xHelpUncompiled/Eme4xHelp/t2_distFormat.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_distFormat.html
@@ -1,16 +1,30 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Distribution Format</b></blockquote>
-<blockquote>Type: compound</blockquote>
-<blockquote>Short Name: distinfo</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>Information about the distributor of and options for obtaining the data set.
-</blockquote>
+<blockquote>Type: compound MD_Format</blockquote>
+<blockquote>ISO Element Name: distributorFormat</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>This section is required by EPA to ensure inclusion of the resource description element (used by Geospatial One Stop and ESRI search tools) and to ensure proper documentation of distribution liability.</blockquote>
+<blockquote>Description of the computer language construct that specifies the representation of data objects in a record, file, message, storage device, or transmission channel. The following elements are included in this section:
+<ul>
+	<li><b>Name</b> - Name of the data transfer format.
+	<li><b>Version</b> - Version of the format (date, number, etc).
+	<li><b>Amendment Number</b> - Format version amendment number.
+	<li><b>Specification</b> - The subset name, profile, or product specification of the format.
+	<li><b>File Decompression Technique</b> - Description of recommended processes or algorithms to apply to the compressed resource.
+</ul>
+</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Provides information about the format used by the distributor. Description of the computer language construct that specifies the representation of data objects in a record, file, message, storage device, or transmission channel.
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
+</blockquote>
 <h3>Domain</h3>
 <blockquote>None.</blockquote>
 <br><br><br><br>
