--- a/EME4xHelpUncompiled/Eme4xHelp/t2_distSOP.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_distSOP.html
@@ -1,16 +1,29 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
-<blockquote>Element:<b>Standard Order Process</b></blockquote>
-<blockquote>Type: compound</blockquote>
-<blockquote>Short Name: distinfo</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>Information about the distributor of and options for obtaining the data set.
-</blockquote>
+<blockquote>Element: <b>Standard Order Process</b></blockquote>
+<blockquote>Type: compound MD_StandardOrderProcess </blockquote>
+<blockquote>ISO Element Name: distributionOrderProcess</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>This section is required by EPA to ensure inclusion of the resource description element (used by Geospatial One Stop and ESRI search tools) and to ensure proper documentation of distribution liability.</blockquote>
+<blockquote>The process in which the resource is obtained or received and other related instructions or fee information.  The following elements are included in this section:
+<ul>
+	<li><b>fees</b> - Fees and terms for obtaining the data/dataset. Best Practices: Include at the end the monetary unit alphabetic code as specified in ISO 4217. Common codes: United States = USD, Canada = CAD, Mexico = MXN or MXV.  Example: 45.00USD
+	<li><b>plannedAvailableDateTime</b> - Date and time the resource will be available.
+	<li><b>orderingInstructions</b> - General instructions, terms, and services provided by the data distributor.
+	<li><b>turnaround</b> - Typical time required for filing a data request. Domain: free text
+</ul>
+</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The process to follow when obtaining the data/dataset.
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
+</blockquote>
 <h3>Domain</h3>
 <blockquote>None.</blockquote>
 <br><br><br><br>
