--- a/EME4xHelpUncompiled/Eme4xHelp/t2_metainfo.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_metainfo.html
@@ -1,15 +1,21 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Metadata Information</b></blockquote>
 <blockquote>Type: compound</blockquote>
-<blockquote>Short Name: metainfo</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>Information on the currentness of the metadata information, and the responsible party.</blockquote>
+<blockquote>ISO Element Name: NA</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>This section is required for EPA geospatial assets as per minimum FGDC standards.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Sections on the currentness of the metadata information and metadata author.
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>Information on the currentness of the metadata information, and the responsible party.</blockquote>
 <h3>Domain</h3>
 <blockquote>None.</blockquote>
 <br><br><br><br>
