--- a/EME4xHelpUncompiled/Eme4xHelp/t2_resourceOwner.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_resourceOwner.html
@@ -1,17 +1,23 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Resource Owner</b></blockquote>
-<blockquote>Type: compound</blockquote>
-<blockquote>Short Name: metc</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The party responsible for the metadata information.</blockquote>
+<blockquote>Type: compound CI_ResponsibleParty</blockquote>
+<blockquote>ISO Element Name: pointOfContact</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>Provide detailed information regarding who should be contacted regarding the metadata specifically. The contact person should be an individual who is knowledgable about the metadata, and may be able to answer questions about the metadata record, as opposed to the data specifically (this may also be the same person as the data set point of contact).  Details on how to provide contact information for the data set are provided in Tab 1.</blockquote>
+<blockquote>Required, Provide detailed information regarding the owner(s) of the resource.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Required
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The owner(s) of the resource.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>The owner(s) of the resource.</blockquote>
 <h3>Domain</h3>
-<blockquote>None.</blockquote>
+<blockquote>CI_ResponsibleParty</blockquote>
 <br><br><br><br>
 </body>
 </html>
