--- a/EME4xHelpUncompiled/Eme4xHelp/t2_resourceType.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_resourceType.html
@@ -1,30 +1,42 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
 <blockquote>Element:<b> Resource Type</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: resdec</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The identifier by which the distributor knows the data set.
-</blockquote>
+<blockquote>Type: MD_ScopeCode</blockquote>
+<blockquote>ISO Element Name: hierarchyLevel</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>This element is required to ensure that information is classified according to content types provided by Geospatial One-Stop (GOS).  GOS uses a list of defined content types to organize geospatial resources for presentation to users.  Users are required to classify information as one of the types listed below.  The content type classification is based on access to the data set.  <br><br>For example, if data are made available as a service (image or feature service), the classification should be listed as 'Live Data and Maps'.  If data are made available through an ftp site or a downloadable location such as a website, the classification would be 'Downloadable Data'.  If data are not accessible through the internet, they are considered 'Offline'.  <br><br>The most common classifications used to document this element are 'Live Data and Maps', 'Downloadable Data', 'Applications', and 'Offline Data'. This classification should correspond with information provided in the online linkage element.  For example, if your data are made available as a service, and are classified as Live Data and Maps, the online linkage should be documented appropriately to reference a 'Live Data and Service' type of URL.  See the description provided for the online linkage field for more information on how to provide online linkage URLs.
+<blockquote>    THis is not correct: ***This element is required to ensure that information is classified according to content types provided by Geospatial One-Stop (GOS).  GOS uses a list of defined content types to organize geospatial resources for presentation to users.  Users are required to classify information as one of the types listed below.  The content type classification is based on access to the data set.  <br><br>For example, if data are made available as a service (image or feature service), the classification should be listed as 'Live Data and Maps'.  If data are made available through an ftp site or a downloadable location such as a website, the classification would be 'Downloadable Data'.  If data are not accessible through the internet, they are considered 'Offline'.  <br><br>The most common classifications used to document this element are 'Live Data and Maps', 'Downloadable Data', 'Applications', and 'Offline Data'. This classification should correspond with information provided in the online linkage element.  For example, if your data are made available as a service, and are classified as Live Data and Maps, the online linkage should be documented appropriately to reference a 'Live Data and Service' type of URL.  See the description provided for the online linkage field for more information on how to provide online linkage URLs.
+</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The class of information to which the referencing entity applies.
+</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
 </blockquote>
 <h3>Domain</h3>
 <ul>
-<li>Live Data and Maps</li>
-<li>Downloadable Data</li>
-<li>Offline Data</li>
-<li>Map Files</li>
-<li>Static Map Images</li>
-<li>Other Documents
-<li>Applications</li>
-<li>Geographic Services</li>
-<li>Clearinghouses</li>
-<li>Geographic Activities</li>
-<li>free text</li>
+<li><b>MD_ScopeCode Values:</b>
+	<ul>
+		<li>dataset
+		<li>attribute
+		<li>attributeType
+		<li>collectionHardware
+		<li>collectionSession
+		<li>series
+		<li>nonGeographicDataset
+		<li>dimensionGroup
+		<li>feature
+		<li>featureType
+		<li>propertyType
+		<li>fieldSession
+		<li>software
+	</ul>
 </ul>
 <br><br><br><br>
 </body>
