--- a/EME4xHelpUncompiled/Eme4xHelp/t2_secclass.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_secclass.html
@@ -4,31 +4,56 @@
 </head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 2</h2>
-<blockquote>Element:<b> Security Classification</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: secclass</blockquote>
+<blockquote>Element:<b> Security Constraints</b></blockquote>
+<blockquote>Type: compound</blockquote>
+<blockquote>ISO Element Name: MD_SecurityConstraints</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>This section pertains to the restrictions applied to the resource or metadata to protect security concerns. Use Limitation and Classification are required for minimum EPA compliancy so that assets may be properly categorized with respect to sharing with external agencies and the general public. This guidance has been updated to reflect Data.gov mandates. The following elements are included:
+<ul>
+	<li><b>Use Limitation/Access Level</b> - Mandatory. Statement on the fitness of use or limitations on the use of the resource or metadata. Domain: public, restricted public, non-public. See Data.gov Requirement/Guidance below.
+	<li><b>Classification</b> - Mandatory. Name of the handling restrictions on the resource or the metadata. Type: MD_ClassificationCode. Domain: unclassified, restricted, confidential, secret, topSecret.
+	<li><b>User Note/Access Level Comment</b> - An explanation of the classification level applied to the resource or metadata. Free text is ok, but if applicable, please choose from the standard list of categories for why access to a dataset might be restricted. See Data.gov Requirement/Guidance below.
+	<li><b>Classification System</b> - Name of the security classification system. Domain: free text.
+	<li><b>Handling Description</b> - Additional information regarding security restrictions on handling the resource or metadata. Domain: free text.	
+ </ul>
+	
+</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote> 
+<ul>
+	<li><b>Use Limitation/Access Level</b> - Mandatory. This field refers to degree to which this dataset could be made available to the public, regardless of whether it is currently available to the public. Choices:
+	<ul>
+		<li><strong>public</strong> - Data asset is or could be made publicly available to all without restrictions
+		<li><strong>restricted public</strong> - Data asset is available under certain use restrictions
+		<li><strong>non-public</strong> - Data asset is not available to members of the public
+		<li><strong>Best Practices:</strong> - If a member of the public can walk into your agency and obtain a dataset, that entry is public even if there are no files online. A restricted public dataset is one only available under certain conditions or to certain audiences (such as researchers who sign a waiver). A non-public dataset is one that could never be made available to the public for privacy, security, or other reasons as determined by your agency.	
+	</ul>
+	<li><b>User Note/Access Level Comment</b> - Mandatory if AccessLevel is "restricted public" or "non-public." An explanation for the selected "accessLevel" including instructions for how to access a restricted file, if applicable, or explanation for why a "non-public" or "restricted public" data asset is not "public," if applicable. Free text is ok, but if applicable, please choose from the standard list of categories for why access to a dataset might be restricted:
+    <ul>
+        <li>EPA Category: Mission Sensitive, NARA Category: Critical Infrastructure
+        <li>EPA Category: Drinking Water Vulnerability Assessments, NARA Category: Critical Infrastructure-Water Assessments
+        <li>EPA Category: Sensitive Drinking Water Related, NARA Category: Critical Infrastructure-Water Assessments
+        <li>EPA Category: IT Security, NARA Category: Information Systems Vulnerability Information
+        <li>EPA Category: Law Enforcement Sensitive, NARA Category: Law Enforcement
+        <li>EPA Category: Attorney Client Privilege, NARA Category: Legal-Privilege
+        <li>EPA Category: Attorney Work Product, NARA Category: Legal-Privilege
+        <li>EPA Category: Deliberative Process Privilege, NARA Category: Legal-Privilege
+        <li>EPA Category: Personally Identifiable Information (PII), NARA Category: Privacy
+        <li>EPA Category: Proprietary, NARA Category: Proprietary
+        <li>EPA Category: Confidential Business Information, NARA Category: Proprietary-Manufacturer
+        <li>EPA Category: Source Selection Information, NARA Category: Proprietary-Source Selection
+    </ul>		
+</ul>
+</blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Handling restrictions imposed on the data set because of national security, privacy, or other concerns.
+</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Handling restrictions imposed on the data set because of national security, privacy, or other concerns.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>This element is required for minimum EPA compliancy so that assets may 
-    be properly categorized with respect to sharing with external agencies and the 
-    general public. This guidance has been updated at 3.2.1 to reflect Data.gov 
-    mandates.</blockquote>
-<h3>Data.gov Requirement/Guidance</h3>
-<blockquote>This field refers to degree to which this dataset could be made available to the public, regardless of whether it is currently available to the public. Choices: 
-<ul>
-<li><strong>public</strong> - Data asset is or could be made publicly available to all without restrictions</li>
-<li><strong>restricted public</strong> - Data asset is available under certain use restrictions</li>
-<li><strong>non-public</strong> - Data asset is not available to members of the public</li>
-</ul>
-For example, if a member of the public can walk into your agency and obtain a dataset, that entry is public even if there are no files online. A restricted public dataset is one only available under certain conditions or to certain audiences (such as researchers who sign a waiver). A non-public dataset is one that could never be made available to the public for privacy, security, or other reasons as determined by your agency.
-</blockquote>
 <h3>Domain</h3>
 <ul>
-<li>public</li>
-<li>restricted public</li>
-<li>non-public</li>
+<li>See Above
 </ul>
 <br><br><br><br>
 </body>
